# tiktok_uploader_telegram

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: lib.rs  main.rs
