[package]
name = "tiktok_uploader_telegram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1"
chrono = "0.4.19"
ms-converter = "1.4"
url = "2.2.2"
serde_json = "1"
reqwest = {version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
teloxide = { version = "0.7.0", features = ["auto-send", "macros"] }
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.3", features = ["rt-multi-thread", "macros"] }